crates/gapura/examples/dev/20-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: { name: files, namespace: dev, generation: 1, creationTimestamp: "2026-09-10T00:00:00Z" }
spec:
  parentRefs: [{ name: main }]
  hostnames: [dev.localhost]
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier: { set: [{ name: X-Gateway, value: gapura }] }
    backendRefs: [{ name: files, port: 80 }]
